--- a/style.css
+++ b/style.css
@@ -50,11 +50,11 @@ img {
 .bottom p {
   font-weight: 900;
 }
-/* .image_put::after {
+.image_put::after {
   content: "7507042350138";
   display: block;
   font-size: 25px;
   font-weight: bold;
   color: #2f8a12;
   animation: blinker 1s linear infinite;
-} */
+}
