--- a/style.css
+++ b/style.css
@@ -48,13 +48,22 @@ img {
 }
 
 .bottom p {
-  font-weight: 900;
+  font-weight: 600;
 }
 .image_put::after {
+  opacity: 1;
   content: "7507042350138";
+  position: relative;
+  left: 72px;
+  bottom: 212px;
   display: block;
   font-size: 25px;
   font-weight: bold;
   color: #2f8a12;
-  animation: blinker 1s linear infinite;
+  animation: blinker 2s ease-in infinite;
+}
+@keyframes blinker {
+  100% {
+    opacity: 0;
+  }
 }
