--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 img {
   display: block;
   margin-bottom: 50px;
-  height: auto;
+  height: 100%;
   max-width: 95%;
 }
 
@@ -19,7 +19,7 @@ img {
   background: #fff;
   box-shadow: 0 0px 10px 0 rgba(67, 67, 69, 0.35);
   max-width: 100vw;
-  height: 100px;
+  height: 50px;
   background-color: white;
   display: flex;
   justify-content: center;
