--- a/style.css
+++ b/style.css
@@ -45,19 +45,20 @@ img {
   padding-bottom: 40px;
   background-color: #01a2a6;
   text-align: center;
-  padding-left: 40px;
-  padding-right: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .bottom p {
   font-weight: bold;
+  font-size: small;
 }
 .image_put::after {
   opacity: 1;
   content: "7507042350138";
   position: relative;
   left: 85px;
-  bottom: 215px;
+  bottom: 220px;
   display: block;
   font-size: 25px;
   font-weight: bold;
