--- a/style.css
+++ b/style.css
@@ -56,6 +56,18 @@ img {
   font-weight: bold;
   font-size: small;
 }
+.image_put::befor {
+  opacity: 1;
+  content: "05/07/2023 to 04/08/2023";
+  position: relative;
+  left: 85px;
+  bottom: 230px;
+  display: block;
+  font-size: 20px;
+  font-weight: bold;
+  font-family: 'Open Sans', sans-serif;
+  color: red;
+}
 .image_put::after {
   opacity: 1;
   content: "7507042350138";
