--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap');
 </style>
+body{
+  margin:0px;
+}
 * {
   box-sizing: border-box;
   padding: 0px;
